objects/ASI_CN_NPL_Sub_brand__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CN_NPL_Brand_Code__c</fullName>
        <label>Brand Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Brand_Description__c</fullName>
        <label>Brand Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Category_Code__c</fullName>
        <label>Category Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Category_Description__c</fullName>
        <label>Category Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Sub_brand_Code__c</fullName>
        <label>Sub-brand Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>NPL Sub-brand</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CN_NPL_Sub_brand_Code__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Sub-brand Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NPL Sub-brands</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>